--- a/Web.config
+++ b/Web.config
@@ -42,4 +42,9 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+
+	<connectionStrings>
+		<add name="MySQLDB" connectionString="server=127.0.0.1;     user=heidem57; password=sql486257;database=heidem57;port=3306"     />
+	</connectionStrings>
+
 </configuration>
