CSS Phase Navbar needing finishing,as well as a page for users and the search page css should be optimtized.

--- a/Housing Project.csproj
+++ b/Housing Project.csproj
@@ -125,7 +125,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Login.aspx" />
+    <Content Include="Content\logo.png" />
+    <Content Include="CreateAccount.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -184,12 +185,14 @@
   <ItemGroup>
     <Compile Include="AccountValidator.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
-    <Compile Include="Login.aspx.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
+    <Compile Include="PropertyListGenerator.cs" />
+    <Compile Include="CreateUserForDatabase.cs" />
+    <Compile Include="CreateAccount.aspx.cs">
+      <DependentUpon>CreateAccount.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Login.aspx.designer.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
+    <Compile Include="CreateAccount.aspx.designer.cs">
+      <DependentUpon>CreateAccount.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controller.cs" />
