--- a/Housing Project.csproj
+++ b/Housing Project.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\logo.png" />
+    <Content Include="Content\logo2.png" />
     <Content Include="SiteMaster.css" />
     <Content Include="CreateAccount.aspx" />
     <Content Include="Contact.aspx" />
@@ -179,6 +180,7 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Search.aspx" />
     <Content Include="Site.Master" />
+    <Content Include="Update.aspx" />
     <Content Include="UserDashboard.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
@@ -239,6 +241,13 @@
     </Compile>
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Update.aspx.cs">
+      <DependentUpon>Update.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Update.aspx.designer.cs">
+      <DependentUpon>Update.aspx</DependentUpon>
     </Compile>
     <Compile Include="User.cs" />
     <Compile Include="UserDashboard.aspx.cs">
